# tmux-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile.am  build.rs  configure.ac  format.c  server-client.c  tmux.c  tmux.h
.zed/: settings.json
regress/: Makefile
src/: args.rs  arguments.rs  client.rs  cmd.rs  compat.rs  environ.rs  file.rs  imsg.rs  lib.rs  libevent.rs  log.rs  main.rs  options.rs  osdep.rs  proc.rs  protocol.rs  screen.rs  server.rs  tmux.rs  tty.rs  util.rs  window.rs
src/cmd/: queue.rs
src/compat/: imsg.rs  queue.rs  tree.rs
src/server/: client.rs
