[package]
name = "tmux-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
# Patch clap to fix https://github.com/clap-rs/clap/issues/3410 to allow
# commands like `tmux -f/dev/null new -d` to work in regression tests.
clap = { path = "../clap", features = ["derive"] }
libc = "0.2.174"
nix = { version = "0.30.1", features = ["user"] }
