[package]
name = "tmux-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "1.0.98"
bitflags = { version = "2.9.1", features = ["bytemuck"] }
bytemuck = { version = "1.23.1", features = ["derive"] }
# Patch clap to fix https://github.com/clap-rs/clap/issues/3410 to allow
# commands like `tmux -f/dev/null new -d` to work in regression tests.
clap = { path = "../clap", features = ["derive"] }
libc = "0.2.174"
log = "0.4.27"
mbox = "0.7.1"
nix = { version = "0.30.1", features = ["feature", "fs", "process", "signal", "socket", "term", "user"] }
spdlog-rs = { version = "0.5.1", features = ["log"] }
thiserror = "2.0.12"

[build-dependencies]
bindgen = "0.72.0"
